[gd_scene load_steps=2 format=3 uid="uid://bjf3bj3cw8h6n"]

[ext_resource type="Script" uid="uid://bt7eujuo4alxu" path="res://addons/modular_hud/components/time_weather_display.gd" id="1_script"]

[node name="TimeWeatherDisplay" type="Control"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 123.0
offset_bottom = 195.0

[node name="TimeLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "12:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PeriodLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Day"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeatherLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Clear"
horizontal_alignment = 1
vertical_alignment = 1
